--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>appcenter</title>
+    <title>Paytm</title>
     <script src="https://g.alicdn.com/dingding/open-develop/1.0.0/dingtalk.js" charset="utf-8"></script>
     <style>
         body,div,h1,p{
@@ -18,7 +18,11 @@
     </style>
   </head>
   <body>
+    <link rel="stylesheet" href="./static/css/vue-bundle.css">
     <div id="app"></div>
+    <script src="./static/js/manifest.js" charset="utf-8"></script>
+    <script src="./static/js/vendor.js" charset="utf-8"></script>
+    <script src="./static/js/vue-bundle.js" charset="utf-8"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
