--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <link rel="stylesheet" href="./static/css/vue-bundle.css">
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="./static/js/manifest.js" charset="utf-8"></script>
     <script src="./static/js/vendor.js" charset="utf-8"></script>
     <script src="./static/js/vue-bundle.js" charset="utf-8"></script>
