--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Paytm</title>
     <style>
         body,div,h1,p{
-            margin: 0px;
-            padding: 0px;
+          margin: 0px;
+          padding: 0px;
         }
-        body{
-            font-size: 14px;
-            color: #333;
-            background-color: #eee;
+        html,body{
+          width: 100%;
+          height: 100%;
+          font-size: 14px;
+          color: #333;
+          background-color: #eee;
         }
     </style>
   </head>
